[package]
name = "com-croftsoft"
version = "0.11.0-SNAPSHOT"
authors = ["David Wallace Croft <david@croftsoft.com>"]
description = "Re-export of com-croftsoft-* crates"
edition = "2021"
homepage = "https://www.CroftSoft.com/"
license = "MIT"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/com-croftsoft"

[dependencies]
com-croftsoft-core = "0.10.0"
