[package]
authors = ["David Wallace Croft <david@croftsoft.com>"]
description = "Re-export of com-croftsoft-* crates"
edition = "2021"
homepage = "https://www.CroftSoft.com/"
license = "MIT"
name = "com-croftsoft"
publish = true
readme = "README.md"
repository = "https://github.com/david-wallace-croft/com-croftsoft"
rust-version = "1.73"
version = "0.11.0"

[dependencies]
com-croftsoft-core = "0.14.0"
com-croftsoft-lib = "0.1.1"
