[package]
authors = ["David Wallace Croft <david@croftsoft.com>"]
description = "Re-export of com-croftsoft-* crates"
edition = "2021"
homepage = "https://www.CroftSoft.com/"
license = "MIT"
name = "com-croftsoft"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/com-croftsoft"
rust-version = "1.73"
version = "0.11.1-SNAPSHOT"

[dependencies]
com-croftsoft-core = "0.14.0"
com-croftsoft-lib = "0.1.1"
